# trousers-attestation

./: .gitignore  Makefile.am  README.md  bootstrap  configure.ac
scripts/: parse_pubek.py  verify_quote.py
src/: tpm_exceptions.hxx  tpm_helper.hxx  tpm_session.cxx  tpm_session.hxx  tpm_trousers.hxx  tpm_types.cxx  tpm_types.hxx  tpm_util.cxx  tpm_util.hxx
